--- a/BMI Calculator/MainWindow.xaml
+++ b/BMI Calculator/MainWindow.xaml
@@ -29,23 +29,23 @@
             <RowDefinition Height="5*"/>
             <RowDefinition Height=".5*"/>
         </Grid.RowDefinitions>
-        
+
         <Label Grid.Column="1" HorizontalAlignment="Left" Grid.Row="1" VerticalAlignment="Top" Content="FirstName"/>
         <Label Content="Last Name:" Grid.Column="1" HorizontalAlignment="Left" Grid.Row="2" VerticalAlignment="Top" RenderTransformOrigin="0.442,0.45"/>
         <Label Content="Phone#" Grid.Column="1" HorizontalAlignment="Left" Grid.Row="3" VerticalAlignment="Top" RenderTransformOrigin="0.442,0.45" Margin="0,1,0,0"/>
         <Label Content="Height Inches:" Grid.Column="1" HorizontalAlignment="Left" Grid.Row="4" VerticalAlignment="Top" RenderTransformOrigin="0.442,0.45" Margin="0,1,0,0"/>
-        <Label Content="Your BMI is:" Grid.Column="4" HorizontalAlignment="Left" Grid.Row="1" VerticalAlignment="Top" RenderTransformOrigin="0.442,0.45" Margin="0,1,0,0" Height="45" Width="112" FontSize="18" FontWeight="Bold"/>
+        <Label x:Name="BMI_Box" Content="Your BMI is:" Grid.Column="4" HorizontalAlignment="Left" Grid.Row="1" VerticalAlignment="Top" RenderTransformOrigin="0.442,0.45" Margin="0,1,0,0" Height="45" Width="112" FontSize="18" FontWeight="Bold"/>
         <Label Content="Weight Lbs:" Grid.Column="1" HorizontalAlignment="Left" Grid.Row="5" VerticalAlignment="Top" RenderTransformOrigin="0.442,0.45"/>
         <TextBox x:Name="First_Name_Box" Grid.Column="2" HorizontalAlignment="Left" Height="23" Margin="0,4,0,0" Grid.Row="1" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <TextBox x:Name="Last_Name_Box" Grid.Column="2" HorizontalAlignment="Left" Height="23" Margin="2,12,0,0" Grid.Row="2" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <TextBox x:Name="Phone_Box" Grid.Column="2" HorizontalAlignment="Left" Height="23" Margin="0,13,0,0" Grid.Row="3" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <TextBox x:Name="Height_Inches_box" Grid.Column="2" HorizontalAlignment="Left" Height="23" Margin="0,13,0,0" Grid.Row="4" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <TextBox x:Name="Weights_lbs_box" Grid.Column="2" HorizontalAlignment="Left" Height="23" Margin="0,10,0,0" Grid.Row="5" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" HorizontalContentAlignment="Center"/>
-        <TextBlock Grid.Column="4"  Grid.Row="2" TextWrapping="Wrap" Text="BMI Results" Grid.ColumnSpan="3" Width="244" Height="83" FontSize="36" FontWeight="Bold" Margin="0,20,0,0" Grid.RowSpan="2" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.503,0.765"  />
-        <TextBlock Grid.Column="3" HorizontalAlignment="Left" Grid.Row="4" TextWrapping="Wrap" Text="Message:" VerticalAlignment="Top" Grid.ColumnSpan="2" Width="122" Height="51" Margin="60,0,0,0" FontWeight="Bold" FontSize="18"/>
-        <Button x:Name="SubmitBtn" Content="Submit" Grid.Column="1" HorizontalAlignment="Left" Margin="23,48,0,0" Grid.Row="6" VerticalAlignment="Top" Width="75"/>
+        <TextBlock x:Name="BMI_Results" Grid.Column="4"  Grid.Row="2" TextWrapping="Wrap" Text="BMI Results" Grid.ColumnSpan="3" Width="244" Height="82" FontSize="36" FontWeight="Bold" Margin="0,10,0,11" Grid.RowSpan="2" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.503,0.765"  />
+        <TextBlock x:Name="Message_Box" Grid.Column="3" HorizontalAlignment="Left" Grid.Row="4" TextWrapping="Wrap" Text="Message:" VerticalAlignment="Top" Grid.ColumnSpan="3" Width="235" Height="102" Margin="60,0,0,0" FontWeight="Bold" FontSize="18" Grid.RowSpan="2"/>
+        <Button x:Name="SubmitBtn" Content="Submit" Grid.Column="1" HorizontalAlignment="Left" Margin="23,48,0,0" Grid.Row="6" VerticalAlignment="Top" Width="75" Click="SubmitBtn_Click"/>
         <Button x:Name="ClearBtn" Content="Clear" Grid.Column="2" HorizontalAlignment="Left" Margin="26,48,0,0" Grid.Row="6" VerticalAlignment="Top" Width="75" Click="ClearBtn_Click"/>
-        <Button x:Name="ExitBtn" Content="Exit" Grid.Column="6" HorizontalAlignment="Left" Margin="22.923,48,0,0" Grid.Row="6" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="ExitBtn" Content="Exit" Grid.Column="6" HorizontalAlignment="Left" Margin="22.923,48,0,0" Grid.Row="6" VerticalAlignment="Top" Width="75" Click="Click_Exit"/>
         <Button x:Name="ImportBtn" Content="Import" Grid.Column="4" HorizontalAlignment="Left" Margin="25,48,0,0" Grid.Row="6" VerticalAlignment="Top" Width="75"/>
         <DataGrid x:Name="xDataGrid"  AutoGenerateColumns="True" Grid.Column="1" HorizontalAlignment="Left" Height="257" Grid.Row="7" VerticalAlignment="Top" Width="722" Grid.ColumnSpan="6"/>
     </Grid>
